--- a/DRLPTest/DRLPTest.csproj
+++ b/DRLPTest/DRLPTest.csproj
@@ -127,9 +127,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DRTimeCruncher\DRTimeCruncher.csproj">
+    <ProjectReference Include="..\DRNumberCrunchers\DRNumberCrunchers.csproj">
       <Project>{7ff3898c-158c-4723-844a-b983f0270952}</Project>
-      <Name>DRTimeCruncher</Name>
+      <Name>DRNumberCrunchers</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
