--- a/DRNumberCrunchers/DRNumberCrunchers.csproj
+++ b/DRNumberCrunchers/DRNumberCrunchers.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7FF3898C-158C-4723-844A-B983F0270952}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DRTimeCruncher</RootNamespace>
-    <AssemblyName>DRTimeCruncher</AssemblyName>
+    <RootNamespace>DRNumberCrunchers</RootNamespace>
+    <AssemblyName>DRNumberCrunchers</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
